fix overflow

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -47,7 +47,7 @@ body {
 
 .form__items {
   height: 257px;
-  overflow: scroll;
+  overflow: auto;
 }
 
 .form__item {
